--- a/coffee/index.html
+++ b/coffee/index.html
@@ -14,8 +14,8 @@
         <section class="section">
             <div class="container">
                 <div class="coffee-suggestions">
-                    <ul class="coffee-list">
-                        <li class="coffee-item">
+                    <div class="coffee-list">
+                        <div class="coffee-item">
                             <a href="#" class="coffee-link">
                                 <div class="coffee-price">
                                     $2
@@ -32,8 +32,8 @@
                                     any cup of coffee until $3
                                 </div>
                             </a>
-                        </li>
-                        <li class="coffee-item">
+                        </div>
+                        <div class="coffee-item">
                             <a href="#" class="coffee-link">
                                 <div class="coffee-price">
                                     $3
@@ -43,15 +43,15 @@
                                     <i class="icon-cup"></i>
                                     <i class="icon-bean"></i>
                                 </div>
-                                <h1 class="coffee-title">
+                                <h2 class="coffee-title">
                                     Gold
-                                </h1>
+                                </h2>
                                 <div class="coffee-text">
                                     any cup of coffee until $5
                                 </div>
                             </a>
-                        </li>
-                        <li class="coffee-item">
+                        </div>
+                        <div class="coffee-item">
                             <a href="#" class="coffee-link">
                                 <div class="coffee-price">
                                     $2.5
@@ -61,15 +61,15 @@
                                     <i class="icon-cup"></i>
                                     <i class="icon-bean"></i>
                                 </div>
-                                <h1 class="coffee-title">
+                                <h2 class="coffee-title">
                                     Silver
-                                </h1>
+                                </h2>
                                 <div class="coffee-text">
                                     any cup of coffee until $4
                                 </div>
                             </a>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
