forget about bottom part of the page

--- a/reviews/index.html
+++ b/reviews/index.html
@@ -97,9 +97,9 @@
                 </div>
                 <div class="reviews-loading">
                     <div class="reviews-loading-img">
-                        <img src="#" alt="image description">
+                        <img src="img/loading.png" alt="image description">
                     </div>
-                    <span>Loading new content</span>
+                    <span class="reviews-loading-text">Loading new content</span>
                 </div>
             </div>
         </section>
